--- a/100_day_javascript/DAY6_MUSIC_PLAYER/style.css
+++ b/100_day_javascript/DAY6_MUSIC_PLAYER/style.css
@@ -20,7 +20,10 @@
 
 body {
     height: 100vh;
-    background: linear-gradient(to top right, var(--primary-color) -150%, var(--secondary-color) 100%);
+    background-image: url("/resources/gradient-bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     font-family: inter, sans-serif;
     position: relative;
 }
@@ -44,7 +47,7 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 320px;
+    width: 350px;
     padding: 25px;
     border-radius: 20px;
     background: rgba(30, 20, 50, 0.7);
@@ -75,15 +78,19 @@ body {
 }
 
 .progress-wrapper {
-    display: flex;
-    align-items: center;
-    gap: 10px;
     font-size: 12px;
     opacity: 0.8;
 }
 
+.time {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    color: var(--gray-color);
+    font-weight: 600;
+}
+
 .progress {
-    flex: 1;
     height: 4px;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
@@ -91,7 +98,7 @@ body {
 }
 
 .progress-bar {
-    width: 60%;
+    width: 0;
     height: 100%;
     background: linear-gradient(to right,
             #ff3e9d,
